Implementation of Comments, and reservation